--- a/dashboard.html
+++ b/dashboard.html
@@ -120,29 +120,50 @@
                                                 <p class="small text-gray-500 mb-0">Morgan Alvarez - 2d</p>
                                             </div>
                                         </a>
+                                        
                                         <a class="shadow-lg d-flex align-items-center dropdown-item" href="#">
-                                            <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="avatars/avatar5.jpeg">
-                                                <div class="bg-success status-indicator"></div>
+                                            <div class="dropdown-list-image mr-3">
+                                                <img class="rounded-circle" src="avatars/avatar5.jpeg">
+                                                <div class="bg-success status-indicator">
+
+                                                </div>
                                             </div>
+                                            
                                             <div class="font-weight-bold">
                                                 <div class="text-truncate"><span>Am I a good boy? The reason I ask is because someone told me that people say this to all dogs, even if they aren't good...</span></div>
-                                                <p class="small text-gray-500 mb-0">Chicken the Dog · 2w</p>
-                                            </div>
-                                        </a><a class="text-center dropdown-item small text-gray-500" href="#">Show All Alerts</a></div>
-                                </div>
-                                <div class="shadow dropdown-list dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown"></div>
-                            </li>
-                            <div class="d-none d-sm-block topbar-divider"></div>
-                            <li class="nav-item dropdown no-arrow" role="presentation">
-                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#"><span class="d-none d-lg-inline mr-2 text-white-600 small">admin</span><img class="border rounded-circle img-profile" src="assets/img/doctor-book.jpg"></a>
-                                    <div
-                                        class="dropdown-menu shadow dropdown-menu-right animated--grow-in how" role="menu"><a class="dropdown-item" role="presentation" href="#"><i class="fas fa-user-plus fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Add new user</a>
-                                        <div class="dropdown-divider"></div><a class="dropdown-item" role="presentation" href="index.html"><i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a></div>
+<p class="small text-gray-500 mb-0">Chicken the Dog · 2w</p>
+</div>
+</a><a class="text-center dropdown-item small text-gray-500" href="#">Show All Alerts</a></div>
+</div>
+<div class="shadow dropdown-list dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown"></div>
+</li>
+
+<div class="d-none d-sm-block topbar-divider">
+
+</div>
+
+            <li class="nav-item dropdown no-arrow" role="presentation">
+                <div class="nav-item dropdown no-arrow">
+                    <a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">
+                        <span class="d-none d-lg-inline mr-2 text-white-600 small">admin</span>
+                        <img class="border rounded-circle img-profile" src="assets/img/doctor-book.jpg">
+                    </a>
+
+                    <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in how" role="menu">
+                        <a class="dropdown-item" role="presentation" href="#">
+                            <i class="fas fa-user-plus fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Add new user
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" role="presentation" href="index.html">
+                            <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout
+                        </a>
                     </div>
-                    </li>
-                    </ul>
-            </div>
-            </nav>
+                </div>
+            </li>
+
+</ul>
+</div>
+</nav>
             <div class="container-fluid">
                 <div class="d-sm-flex justify-content-between align-items-center mb-4">
                     <h3 class="text-dark mb-0">Dashboard</h3><a class="btn btn-primary btn-sm d-none d-sm-inline-block" role="button" href="#"><i class="fas fa-download fa-sm text-white-50"></i>&nbsp;Generate Report</a></div>
